[gd_scene load_steps=6 format=3 uid="uid://d3pqg0mgklq4u"]

[ext_resource type="Script" path="res://Scripts/SavePoint.gd" id="1_40qwt"]
[ext_resource type="Texture2D" uid="uid://bymuk2dtl6kl0" path="res://Assets/yarn-Sheet.png" id="2_0e7c5"]

[sub_resource type="Animation" id="Animation_cbt2i"]
resource_name = "unfurl"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.278431, 0.996078, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1aem7"]
_data = {
"unfurl": SubResource("Animation_cbt2i")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_di0cy"]
size = Vector2(23, 16)

[node name="SavePoint" type="Node2D"]
script = ExtResource("1_40qwt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_0e7c5")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1aem7")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
explosiveness = 0.45
emission_shape = 1
emission_sphere_radius = 10.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 36.15
initial_velocity_max = 156.63
angle_min = 12.5
angle_max = 12.5
color = Color(0.976471, 0, 0.992157, 1)

[node name="TriggerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(-4, -1)
shape = SubResource("RectangleShape2D_di0cy")

[node name="RespawnPoint" type="Marker2D" parent="."]
position = Vector2(-5, -25)

[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
